2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Put #undef toto between #ifdef toto and #endif.
	* include/hppCorbaServer/hppciObstacle.h: .
	* include/hppCorbaServer/hppciProblem.h: .
	* include/hppCorbaServer/hppciRobot.h: .

2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Add NEWS files to explain modifications.
	* NEWS: New.

2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Homogeneize interface in ChppciOpenHrpClient class.
	* idl/server/hppciObstacleServer.idl.in: 
	* include/hppCorbaServer/hppciOpenHrp.h.in: 
	* src/hppciObstacle.cpp: 
	* src/hppciOpenHrp.cpp: 
	Replace const char* by std::string in interface,
	pass directory instead of OpenHrp prefix in some
 	functions.

2009-05-01  Florent Lamiraux  <florent@laas.fr>

	Remove automatically generated files.
	* depcomp: Remove.
	* missing: Remove.

hpp-corbaserver 1.7.3 released April 20, 2009

	61. Added missing #include <iostream>
	
hpp-corbaserver 1.7.2 released April 17, 2009

	60. Adaptation to modifications in kwsPlus.
	
hpp-corbaserver 1.7.1 released April 8, 2009

	59. Call function not specific to HRP2 when constructing another robot
	
hpp-corbaserver 1.7 released March 14, 2009

	58. Update documentation build and install
	
hpp-corbaserver 1.6.1 released March 12, 2009

	57. Update default path to HRP2 VRML file to OpenHRP-3 location.
	
hpp-corbaserver 1.6 released Dec  9, 2008

	56. Added optional robot model path to loadHrp2Model(). 
	55. Added requests to set and get dynamic penetration.
	54. Specify penetration when inserting a new robot in ChppPlanner
	    object.
	53. Added method to get length of path and corrected prototype of
	    configAtDistance.
	52. Test size of config in ChppciProblem_impl::setInitialConfig and
	    setGoalConfig.
	51. Added interface function to insert a configuration extractor.

hpp-corbaserver 1.5 released Sep 10, 2008

	50. Test index of vertices in ChppciRobot::addTriangle and
	    ChppciObstacle::addTriangle